--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "gulpfile.js",
   "type": "module",
   "scripts": {
-    "dev": "gulp"
+    "dev": "gulp",
+    "serve": "gulp serve",
+    "build": "gulp build"
   },
   "keywords": [
     "gulp",
